--- a/src/components/layout/Navbar.css
+++ b/src/components/layout/Navbar.css
@@ -26,7 +26,7 @@
   }
   
   .logo-text {
-    color: #00adb5; /* Teal accent for "SmartHome" */
+    color: #00adb5;
   }
   
   /* Navigation menu */
